* Right JVM flags to log GC events; * New memory limits.